--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "TELEGRAM_BOT_TOKEN": "BOT_TOKEN_ANDA",
-    "TELEGRAM_CHAT_ID": "CHAT_ID_USER_ANDA"
+    "TELEGRAM_BOT_TOKEN": "7503622343:AAGcFKfbVCABnX14C4M3Z3SKd5KeeU7eYTk",
+    "TELEGRAM_CHAT_ID": "6173601862"
 }
